fix bug with null tagline